<resources>
    <string name="app_name">FrontEnd</string>
    <string name="title_home">홈</string>
    <string name="title_closet">옷장</string>
    <string name="title_styling">코디</string>
    <string name="title_my_page">내 정보</string>
    <string name="title_registration_cloth">옷 추가</string>
    <string name="title_add_cloth">옷 추가</string>
    <string name="desc_add">Add</string>
    <string name="title_add_close">AddClose</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 달력 -->
    <string name="day">DAY</string>
</resources>
