<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ssafy.closetory.homeActivity.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_closet"
        android:name="com.ssafy.closetory.homeActivity.closet.ClosetFragment"
        android:label="@string/title_closet"
        tools:layout="@layout/fragment_closet" />

    <fragment
        android:id="@+id/navigation_styling"
        android:name="com.ssafy.closetory.homeActivity.styling.StylingFragment"
        android:label="@string/title_styling"
        tools:layout="@layout/fragment_styling" >
        <action
            android:id="@+id/action_navigation_styling_to_navigation_ai_styling"
            app:destination="@id/navigation_ai_styling" />
    </fragment>


    <fragment
        android:id="@+id/navigation_ai_styling"
        android:name="com.ssafy.closetory.homeActivity.aiStyling.AiStylingFragment"
        android:label="@string/title_styling"
        tools:layout="@layout/fragment_ai_styling">

        <!-- AI 화면에서 "직접 코디 생성" 버튼 누르면 StylingFragment로 이동하는 코드-->
        <action
            android:id="@+id/action_ai_to_manual_styling"
            app:destination="@id/navigation_styling" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.ssafy.closetory.homeActivity.mypage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page">

        <!-- 회원정보 수정으로 이동 -->
        <action
            android:id="@+id/action_navigation_my_page_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />

    </fragment>

    <!-- EditProfileFragment -->
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.ssafy.closetory.homeActivity.mypage.edit.EditProfileFragment"
        android:label="회원정보 수정"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/navigation_registration_close"
        android:name="com.ssafy.closetory.homeActivity.registrationCloth.RegistrationClothFragment"
        android:label="@string/title_registration_cloth"
        tools:layout="@layout/fragment_registration_cloth" />
</navigation>
